fix speakerCard on mobile

--- a/src/components/SpeakerCard.module.css
+++ b/src/components/SpeakerCard.module.css
@@ -104,7 +104,10 @@
     height: 270px;
   }
   .modalImage,
-  .right,
+    .right,
+    .number {
+        display: none;
+    }
   .left {
     width: auto;
   }
